# llm-dataset-digest

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
app/: app.py  app_router_memory.py  foresee.db
app/vectorstore/: index.pkl
docs/: index.md  license.md  reference.md  usage.md
jupyter_notebooks/: knowledge_graph.ipynb  parse_db.ipynb  ppt_text_parser.ipynb  vectorstore_FAISS.ipynb  vectorstore_pinecone_dump.ipynb
src/llm_dataset_digest/: __init__.py  __main__.py
src/llm_dataset_digest/text_parsing/: __init__.py  iter_to_nonempty_table_cells.py  parse_ppt.py  parse_ppt_one_page.py  parse_ppt_text.py  save_to_json.py  ungroup_ppt.py
src/llm_dataset_digest/vector_store/: __init__.py  load_jsonfile.py  tiktoken_len.py  vectorstore_faiss.py
tests/: test_main.py
